--- a/config-example.json
+++ b/config-example.json
@@ -16,10 +16,9 @@
     "server_port": 8080
   },
   "ipfs": {
-    "host": "ipfs.infura.io",
-    "port": 5001,
-    "protocol": "https",
-    "gateway": "https://ipfs.io/ipfs/"
+    "service": "web3.storage",
+    "email": "your-email@example.com",
+    "gateway": "https://{cid}.ipfs.w3s.link"
   },
   "ethereum": {
     "provider_url": "http://localhost:8545",
